--- a/css/styles.css
+++ b/css/styles.css
@@ -436,6 +436,11 @@ input[type="checkbox"] {
     width: 90%;
     cursor: pointer;
 }
+.domain-wrapper p {
+    margin-left: 10px;
+    color: #171D25;
+    font: normal normal bold 16px/22px TKT;
+}
 
 /* *************** responsive *************** */
 @media only screen and (max-width: 1100px) {
