--- a/css/styles.css
+++ b/css/styles.css
@@ -522,7 +522,7 @@ input[type="checkbox"] {
     }
     .main-intro {
         position: absolute;
-        bottom: -100%;
+        left: -100%;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -534,9 +534,9 @@ input[type="checkbox"] {
         margin-top: 10px;
         text-align: center;
         justify-content: flex-start;
-        height: 60vh;
-        bottom: 0;
+        left: 0;
         width: 100%;
+        height: 100vh;
     }
     .list-wrapper ul {
         display: flex;
