--- a/css/styles.css
+++ b/css/styles.css
@@ -468,10 +468,13 @@ input[type="checkbox"] {
     .below-nav-items {
         display: flex;
         flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
         position: fixed;
         left: -100%;
         top: 70px;
         background-color: #FFFFFF;
+        height: 100vh;
         width: 100%;
         text-align: center;
         transition: 0.3s;
