--- a/css/styles.css
+++ b/css/styles.css
@@ -449,6 +449,7 @@ input[type="checkbox"] {
         padding: 0 10px;
         overflow: hidden;
     }
+    
     .hamburger{
         display: block;
         margin-right: 10px;
@@ -540,6 +541,10 @@ input[type="checkbox"] {
         left: 0;
         width: 100%;
         height: 100vh;
+    }
+    #domains li {
+        width: 100%;
+        padding: 0;
     }
     .list-wrapper ul {
         display: flex;
